Fixed navbar. (Browser was put in wrong position)

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -93,7 +93,6 @@
 
     .signin-signout {
       color: white;
-
       font-size: 18px;
       text-align: center;
 
@@ -159,7 +158,8 @@
         }
       }
       .browse {
-        height: 62px;
+        padding: 0px;
+        vertical-align: top;
         font-size: 18px;
         background-color: #82B64A;
         border: 0px solid #82B64A;
